--- a/index.html
+++ b/index.html
@@ -15,22 +15,30 @@
   </style>
 </head>
 <body>
-
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
+  <main class="container-article-preview">
+    <div class="image">
+      <img src="./src/images/drawers.jpg" alt="Mesa de Cabeceira">
+    </div>
+    <section class="container-info">
+      <div class="article-title">
+        <h1>Shift the overall look and feel by adding these wonderful 
+  touches to furniture in your home</h1>
+      </div>
+      <div class="article-content">
+        <p>Ever been in a room and felt like something was missing? Perhaps 
   it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  to help you make any room feel complete.</p>
+      </div>
+      <div class="author-information">
+        <div class="personal-information-release">
+           Michelle Appleton
+           28 Jun 2020
+        </div>
+        <div class="social-media">
+          <img src="/src/images/icon-share.svg" alt="Share">
+        </div>
+      </div>
+    </section>
+  </main> 
 </body>
 </html>
