--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Article preview component</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./src/css/reset.css">
   <link rel="stylesheet" href="./src/css/variables.css">
   <link rel="stylesheet" href="./src/css/style.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <!-- <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style> -->
+  
 </head>
+
 <body>
   <main class="container-article-preview">
     <div class="image">
@@ -24,24 +27,25 @@
     </div>
     <section class="container-info">
       <div class="article-title">
-        <h1>Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home</h1>
+        <h1>Shift the overall look and feel by adding these wonderful
+          touches to furniture in your home</h1>
       </div>
       <div class="article-content">
-        <p>Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.</p>
+        <p>Ever been in a room and felt like something was missing? Perhaps
+          it felt slightly bare and uninviting. I’ve got some simple tips
+          to help you make any room feel complete.</p>
       </div>
       <div class="author-information">
         <div class="personal-information-release">
-           Michelle Appleton
-           28 Jun 2020
+          Michelle Appleton
+          28 Jun 2020
         </div>
         <div class="social-media">
           <img src="/src/images/icon-share.svg" alt="Share">
         </div>
       </div>
     </section>
-  </main> 
+  </main>
 </body>
+
 </html>
