Modificações nas tags html e remoção de comentários, no style.css e responsive.css comentado.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
-
+  
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Article preview component</title>
@@ -15,8 +14,7 @@
   <link rel="stylesheet" href="./src/css/reset.css">
   <link rel="stylesheet" href="./src/css/variables.css">
   <link rel="stylesheet" href="./src/css/style.css">
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link rel="stylesheet" href="./src/css/responsive.css">
   
 </head>
 
@@ -36,9 +34,12 @@
           to help you make any room feel complete.</p>
       </div>
       <div class="author-information">
+        <div class="photo">
+          <img src="./src/images/avatar-michelle.jpg" alt="">
+        </div>
         <div class="personal-information-release">
-          Michelle Appleton
-          28 Jun 2020
+          <p>Michelle Appleton</p>
+          <span>28 Jun 2020</span>
         </div>
         <div class="social-media">
           <img src="/src/images/icon-share.svg" alt="Share">
