Tentativa de correções no html, style e responsivo com comentários anexados.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Article preview component</title>
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="./src/css/variables.css">
   <link rel="stylesheet" href="./src/css/style.css">
   <link rel="stylesheet" href="./src/css/responsive.css">
-  
+
 </head>
 
 <body>
@@ -43,6 +43,8 @@
         </div>
         <div class="social-media">
           <img src="/src/images/icon-share.svg" alt="Share">
+          <div class="icon">
+          </div>
         </div>
       </div>
     </section>
