Mudança para subir para o github pages

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <span>28 Jun 2020</span>
         </div>
         <div class="social-media">
-          <img src="/src/images/icon-share.svg" alt="Share">
+          <img src="./src/images/icon-share.svg" alt="Share">
           <div class="icon">
           </div>
         </div>
