Na index inserção da div container-social, remoção de margin-left no style.css, ajustes nas medias queries no responsivo.css

--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
         <div class="photo">
           <img src="./src/images/avatar-michelle.jpg" alt="">
         </div>
-        <div class="personal-information-release">
-          <p>Michelle Appleton</p>
-          <span>28 Jun 2020</span>
-        </div>
-        <div class="social-media">
-          <img src="./src/images/icon-share.svg" alt="Share">
-          <div class="icon">
+        <div class="container-social">
+          <div class="personal-information-release">
+            <p>Michelle Appleton</p>
+            <span>28 Jun 2020</span>
+          </div>
+          <div class="social-media">
+            <img src="./src/images/icon-share.svg" alt="Share">
+            <div class="icon">
+            </div>
           </div>
         </div>
       </div>
